# Project_siyu

./: CMakeLists.txt  LICENSE  README.md  create_vfh_dataset.cpp  ply2dataset.cpp  write_VFH_pcd.cpp
converter/: Collada2Ply.cpp  Mesh.h  Model.h  ply2pcd.cpp
create_dataset/: pcd2dataset.cpp
examples/method1/: chambre.pcd  maquette.pcd  method1_seg.pcd
examples/method2/: VFH_svm_features.txt  training_VFH_features_82.pcd  training_model_50.pcd  vfh_dataset.model
matching/method1/: capture_seg.cpp  features_matching.cpp
matching/method2/: svm_test.cpp
others/: hough_voting.cpp  lccp.cpp  region_growing_segmentation.cpp
tsdf_cloud/: evaluation.h  test_kinfu.cpp
